--- a/index.html
+++ b/index.html
@@ -17,6 +17,53 @@
     <title>GPT-3</title>
 </head>
 <body>
+    <!-- HEADER START -->
+    <header class="header">
+        <div class="container">
+            <!-- HEADER NAVBAR -->
+            <nav class="navbar">
+                <a href="#">
+                    <img src="images/logo.png" alt="logo" class="navbar-log">
+                </a>
+                <ul class="navbar-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">What is GPT?</a></li>
+                    <li><a href="#">Open AI</a></li>
+                    <li><a href="#">Case Study</a></li>
+                    <li><a href="#">Library</a></li>
+                </ul>
+                <div class="navbar-btns">
+                    <button class="btn sign-in">
+                        <a href="#">Sign in</a>
+                    </button>
+                    <button class="btn sign-up">
+                        <a href="#"> Sign up</a>
+                    </button>
+                </div>
+            </nav>
+            <!-- HEADER CONTENT -->
+            <div class="header-content">
+                <div class="content">
+                    <h1>
+                        Let's Build Something amazing with GPT-3 OpenAI
+                    </h1>
+                    <p>
+                        Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy alteration boisterous the attachment. Party we years to order allow asked of.
+                    </p>
+                    <div class="email-input">
+                        <input type="email" placeholder="Your Email Address">
+                        <button>
+                            <a href="#">Get Started</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="images/Header-Illustration.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- HEADER END -->
 
 
     <!-- SCRIPTS -->
