add the partners section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
     </header>
     <!-- HEADER END -->
 
+    <!-- PARTNERS START -->
+    <section class="partners">
+        <div class="container">
+            <img src="images/google.png" alt="google">
+            <img src="images/slack.png" alt="slack">
+            <img src="images/atlassian.png" alt="atlassian">
+            <img src="images/dropbox.png" alt="dropbox">
+            <img src="images/shopify.png" alt="shopify">
+        </div>
+    </section>
+    <!-- PARTNERS END -->
+
 
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
