add the about section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,54 @@
     </section>
     <!-- PARTNERS END -->
 
+    <!-- ABOUT START -->
+    <section class="about">
+        <div class="container">
+            <div class="about-top">
+                <div class="heading">
+                    <div class="ruler"></div>
+                    <span>What is GPT-3</span>
+                </div>
+                <p>
+                    We so opinion friends me message as delight. Whole front do of plate heard oh ought. His defective nor convinced residence own. Connection has put impossible own apartments boisterous. At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on by.
+                </p>
+            </div>
+            <div class="about-middle">
+                <h3>The possibilities are beyond <br>  your imagination</h3>
+                <a href="#">Explore The Library</a>
+            </div>
+            <div class="about-bottom">
+                <div class="box">
+                    <div class="heading">
+                        <div class="ruler"></div>
+                        <span>Chatbots</span>
+                    </div>
+                    <p>
+                        We so opinion friends me message as delight. Whole front do of plate heard oh ought. 
+                    </p>
+                </div>
+                <div class="box">
+                    <div class="heading">
+                        <div class="ruler"></div>
+                        <span>Knowledgebase</span>
+                    </div>
+                    <p>
+                        At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on by. As put impossible own apartments b
+                    </p>
+                </div>
+                <div class="box">
+                    <div class="heading">
+                        <div class="ruler"></div>
+                        <span>Education</span>
+                    </div>
+                    <p>
+                        At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on by. As put impossible own apartments b
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT END -->
 
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
