--- a/index.html
+++ b/index.html
@@ -126,6 +126,72 @@
     </section>
     <!-- ABOUT END -->
 
+    <!-- FEATURE START -->
+    <section class="feature">
+        <div class="container">
+            <div class="feature-top">
+                <div class="left">
+                    <h3>
+                        The Future is Now and You Just Need To Realize It. Step into Future Today & Make it Happen.
+                    </h3>
+                    <a href="#">Request Early Access to Get Started</a>
+                </div>
+                <div class="right">
+                    <div class="row">
+                        <div class="heading">
+                            <div class="ruler"></div>
+                            <span>Improving end distrusts instantly </span>
+                        </div>
+                        <p>
+                            From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts may instantly was household applauded.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="heading">
+                            <div class="ruler"></div>
+                            <span>Become the tended active </span>
+                        </div>
+                        <p>
+                            Considered sympathize ten uncommonly occasional assistance sufficient not. Letter of on become he tended active enable to.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="heading">
+                            <div class="ruler"></div>
+                            <span>Message or am nothing </span>
+                        </div>
+                        <p>
+                            Led ask possible mistress relation elegance eat likewise debating. By message or am nothing amongst chiefly address.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="heading">
+                            <div class="ruler"></div>
+                            <span>Really boy law county </span>
+                        </div>
+                        <p>
+                            Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-bottom">
+                <div class="image">
+                    <img src="images/Feature-Image.png" alt="">
+                </div>
+                <div class="content">
+                    <span>Request Early Access to Get Started</span>
+                    <h3>The possibilities are beyond your imagination</h3>
+                    <p>
+                        Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise blessing. Indulgence way everything joy alteration boisterous the attachment. Party we years to order allow asked of.
+                    </p>
+                    <a href="#">Request Early Access to Get Started</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FEATURE END -->
+
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
 </body>
