add the cta section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,20 @@
     </section>
     <!-- FEATURE END -->
 
+    <!-- CTA START -->
+    <section class="cta">
+        <div class="container">
+            <div class="cta-content">
+                <span>Request Early Access to Get Started</span>
+                <h4>Register today & start exploring the endless possibilities.</h4>
+            </div>
+            <button class="cta-btn">
+                <a href="#">Get Started</a>
+            </button>
+        </div>
+    </section>
+    <!-- CTA END -->
+
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
 </body>
