add the blog section

--- a/index.html
+++ b/index.html
@@ -206,6 +206,67 @@
     </section>
     <!-- CTA END -->
 
+    <!-- BLOG START -->
+    <section class="blogs">
+        <div class="container">
+            <h2>A lot is happening, <br> We are blogging about it.</h2>
+            <div class="blogs-parent">
+                <div class="blog-1 blog">
+                    <div class="bg-blog-1 bg"></div>
+                    <div class="content">
+                        <span>Sep 26,2021</span>
+                        <p>
+                            GPT-3 and Open  AI is the future. Let us exlore how it is?
+                        </p>
+                        <span>Read Full Article</span>
+                    </div>
+                </div>
+                <div class="blog-2 blog">
+                    <div class="bg-blog-2 bg"></div>
+                    <div class="content">
+                        <span>Sep 26,2021</span>
+                        <p>
+                            GPT-3 and Open  AI is the future. Let us exlore how it is?
+                        </p>
+                        <span>Read Full Article</span>
+                    </div>
+                </div>
+                <div class="blog-3 blog">
+                    <div class="bg-blog-3 bg"></div>
+                    <div class="content">
+                        <span>Sep 26,2021</span>
+                        <p>
+                            GPT-3 and Open  AI is the future. Let us exlore how it is?
+                        </p>
+                        <span>Read Full Article</span>
+                    </div>
+                </div>
+                <div class="blog-4 blog">
+                    <div class="bg-blog-4 bg"></div>
+                    <div class="content">
+                        <span>Sep 26,2021</span>
+                        <p>
+                            GPT-3 and Open  AI is the future. Let us exlore how it is?
+                        </p>
+                        <span>Read Full Article</span>
+                    </div>
+                </div>
+                <div class="blog-5 blog">
+                    <div class="bg-blog-5 bg"></div>
+                    <div class="content">
+                        <span>Sep 26,2021</span>
+                        <p>
+                            GPT-3 and Open  AI is the future. Let us exlore how it is?
+                        </p>
+                        <span>Read Full Article</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- BLOG END -->
+
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
 </body>
